@@ -1980,7 +1980,9 @@ def addPackagesForComponents(group, repos, troveCache):
 
     # if the user mentions both foo and foo:runtime, don't remove
     # direct link to foo:runtime
-    troveTups = [ x for x in packages if not group.hasTrove(*x)]
+    troveTups = [ x for x in packages
+                    if not (group.hasTrove(*x) and group.isExlicit(*x)) ]
+    troveTups = packages.keys()
     hasTroves = repos.hasTroves(troveTups)
     troveTups = [ x for x in troveTups if hasTroves[x] ]
 
@@ -2054,8 +2056,7 @@ def resolveGroupDependencies(group, cache, cfg, repos, labelPath, flavor,
 
     # there's nothing worse than seeing a bunch of nice group debugging
     # information and then having your screen filled up with all 
-    # of the update code's debug mess.  Until that logging is moved
-    # to it's own private location, turn it off.
+    # of the update code's debug mess.
     resetVerbosity = (log.getVerbosity() == log.LOWLEVEL)
     if resetVerbosity:
         log.setVerbosity(log.DEBUG)
@@ -2096,13 +2097,12 @@ def resolveGroupDependencies(group, cache, cfg, repos, labelPath, flavor,
                 flavorStr = ''
 
             log.info("\t%s=%s%s" % (provTroveTup[0], verStr, flavorStr))
+            explicit = True # always include this trove immediately
+                            # in the package, even if it used to be included
+                            # implicitly through a sub-package.
 
-            if group.hasTrove(*provTroveTup):
-                explicit = False
-            else:
-                explicit = True
-            group.addTrove(provTroveTup, explicit, byDefault, [],
-                           reason=(ADD_REASON_DEP, troveTup) )
+            group.addTrove(provTroveTup, explicit, True, [],
+                           reason=(ADD_REASON_DEP, troveTup))
             neededTups.append(provTroveTup)
 
     cache.cacheTroves(neededTups)
